crates/ssa-workflow-derive/tests/ui/duplicate_crate.stderr
error: duplicate canonical_encode crate
 --> tests/ui/duplicate_crate.rs:4:40
  |
4 | #[canonical_encode(crate = "workflow", crate = "other_workflow")]
  |                                        ^^^^^
